{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 14,
  "lineage": "089e3b66-09fe-e652-6f2d-4df8d3f8a096",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "factlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:364485175950:loadbalancer/app/factorial/64656cb5f420b0b5",
            "arn_suffix": "app/factorial/64656cb5f420b0b5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "factorial-1242678218.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:364485175950:loadbalancer/app/factorial/64656cb5f420b0b5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "factorial",
            "security_groups": [
              "sg-077dfaa1ee6714028"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01924ff38472dd079"
              },
              {
                "subnet_id": "subnet-057d1e5cd23afdff4"
              }
            ],
            "subnets": [
              "subnet-01924ff38472dd079",
              "subnet-057d1e5cd23afdff4"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0099b31e0ede4abd1",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.lb_sg.aws_security_group.this",
            "module.lb_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:364485175950:loadbalancer/app/test-lb-tf/0708b0da20f4f72d",
            "arn_suffix": "app/test-lb-tf/0708b0da20f4f72d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-5340208.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:364485175950:loadbalancer/app/test-lb-tf/0708b0da20f4f72d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-077dfaa1ee6714028"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01924ff38472dd079"
              },
              {
                "subnet_id": "subnet-057d1e5cd23afdff4"
              }
            ],
            "subnets": [
              "subnet-01924ff38472dd079",
              "subnet-057d1e5cd23afdff4"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0099b31e0ede4abd1",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.lb_sg.aws_security_group.this",
            "module.lb_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:364485175950:listener/app/factorial/64656cb5f420b0b5/c00b84370b215f68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:364485175950:targetgroup/factorial-tg/47c373558c7eac75",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:364485175950:listener/app/factorial/64656cb5f420b0b5/c00b84370b215f68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:364485175950:loadbalancer/app/factorial/64656cb5f420b0b5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.factlb",
            "aws_lb_target_group.factorialtg",
            "module.lb_sg.aws_security_group.this",
            "module.lb_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "factorialtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:364485175950:targetgroup/factorial-tg/47c373558c7eac75",
            "arn_suffix": "targetgroup/factorial-tg/47c373558c7eac75",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:364485175950:targetgroup/factorial-tg/47c373558c7eac75",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "factorial-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0099b31e0ede4abd1"
          }
        }
      ]
    },
    {
      "module": "module.lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:364485175950:security-group/sg-077dfaa1ee6714028",
            "description": "ECS-LB-SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077dfaa1ee6714028",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ECS-LB-SG-20220212160019687900000001",
            "name_prefix": "ECS-LB-SG-",
            "owner_id": "364485175950",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECS-LB-SG"
            },
            "tags_all": {
              "Name": "ECS-LB-SG"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0099b31e0ede4abd1"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-905185486",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-077dfaa1ee6714028",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg.aws_security_group.this",
            "module.lb_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.lb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3123482873",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077dfaa1ee6714028",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg.aws_security_group.this",
            "module.lb_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2500167709",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077dfaa1ee6714028",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg.aws_security_group.this",
            "module.lb_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}